--- a/pom.xml
+++ b/pom.xml
@@ -91,10 +91,12 @@
 			<version>3.0</version>
 		</dependency>
 
+		<!--
+		https://mvnrepository.com/artifact/tools.jackson.core/jackson-databind -->
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
+			<groupId>tools.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.16.1</version>
+			<version>3.0.0</version>
 		</dependency>
 
 
